-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.942 2011-04-12 17:52:00 guru Exp $
-----------------------------------------------------------------------------------------

2011-04-12      pwessel
	* configure.ac:		Added check for log2, with macro in gmt_math.h
	
2011-04-12	remko
	* gmt_esri_io.c:	Load GTOPO30 and SRTM30 as pixel registered grids (which they are).
	* gmt_gdalread.[ch]:	Removed C.active from GDALREAD_CTRL. Need was based on misinterpretation.
	* gmt_grdio.c:		Force pixel registration in GMT_read_image_info.
	* gmt_customio.c:	Force pixel registration in GMT_gdal_read_grd_info.

2011-04-11      pwessel
	* grdproject_func.c:	Output grd header had wrong units when non-inch settings were in effect.

2011-04-11	remko
	* *.c:			Produce consistent messages (Warning:, Error:, Syntax error:)
	* gmt_io.h:		Introduced "enum {GMT_X, GMT_Y, GMT_Z};" to make debugging easier
	* gmt_init.c:		Allow using "c" for arcseconds in -B option in GMT_COMPAT.

2011-04-09	jluis
	* psimage_func.c:	When used with GDAL alow selecting the image's bands order via a
				my_image.jpg+b<stuff> mechanism. 
				Test if image name has a +b<stuff> glued to the name.
	* grdimage_func.c:	---"---
	* gmt_grd.h:		Add a new member "pocket" to the GRD_HEADER struct
	* gmt_gdalread.c:	Fix band parsing algoito allow band selection with reverse ordering. 
				When reading image to grid make sure only one band is processed.
	* gmt_gdalread.h:	Add a new member to GD_CTRL to hold the actual number of loaded bands
	* gmtapi_util.c:	---"---
	* gmt_grdio.c:		---"---
				Check on the "pocket" header member for info about band selection.
	* gmt_customio.c:	---"---

2011-04-07	pwessel
	* gmt_fft.c:		New and separate FFT container which will deal with
				the many ways to get a fast FFT on a particular system.

2011-04-07	jluis
	* gmt_gdalread.c:	Can store images data with BIP or BSQ interleaving.

2011-04-07	remko