@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.942 2011-04-12 17:52:00 guru Exp $
+	$Id: ChangeLog,v 1.943 2011-04-12 20:30:58 remko Exp $
 -----------------------------------------------------------------------------------------
 
 2011-04-12      pwessel
@@ -10,6 +10,9 @@
 	* gmt_gdalread.[ch]:	Removed C.active from GDALREAD_CTRL. Need was based on misinterpretation.
 	* gmt_grdio.c:		Force pixel registration in GMT_read_image_info.
 	* gmt_customio.c:	Force pixel registration in GMT_gdal_read_grd_info.
+	* gmt_esri_io.c:	Put type flags in newly created "flags" variable in grid header.
+	* grdreformat_func.c:	Fixed bug when using -R. Did not select region properly.
+	* examples/ex32:	New example, thanks to Stephan Eickschen.
 
 2011-04-11      pwessel
 	* grdproject_func.c:	Output grd header had wrong units when non-inch settings were in effect.
